# PythonWebHW10

./: Hw_10.ipynb  README.md  main.py  pyproject.toml  redis-cache.py
src/: models.py  seed.py
