[tool.poetry]
name = "pythonwebhw10"
version = "0.1.0"
description = ""
authors = ["Ivan Yevpat <maracasabat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^14.2.0"
mongoengine = "^0.24.2"
redis = "^4.3.4"
redis-lru = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
